--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
   <div class="login-box">
     <!-- College logo here -->
-    <img src="apec.png" alt="College Logo">
+    <img src="apec.jpg" alt="College Logo">
 
     <h2>Login</h2>
     <form>
